<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.finances.FinanceFormActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.Maxwell.FinancesAppBarLayout">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appbar_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/finance_form_title" />

    </com.google.android.material.appbar.AppBarLayout>
    
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        android:padding="8dp">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remark_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/mandatory_fields_remark"/>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputFilledStyle"
                android:id="@+id/title_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/remark_text_view"
                android:layout_marginTop="8dp"
                android:hint="@string/title_text_input_label"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_text_input"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_text_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:hint="@string/category_text_input_label">

                <AutoCompleteTextView
                    android:id="@+id/category_text_input_auto_complete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/manage_finance_categories_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/category_text_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:text="@string/add_finance_category_text" />

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputFilledStyle"
                android:id="@+id/value_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manage_finance_categories_text_view"
                android:layout_marginTop="8dp"
                android:hint="@string/value_text_input_label"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/value_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/currency_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/value_text_input_layout"
                android:text="@string/currency_text_view"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <RadioGroup
                android:id="@+id/currency_radio_group"
                android:checkedButton="@+id/brl_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currency_text_view"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/brl_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/brl_radio_button"/>

                <RadioButton
                    android:id="@+id/euro_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/euro_radio_button"/>

            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/type_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currency_radio_group"
                android:text="@string/type_text_view"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <RadioGroup
                android:id="@+id/type_radio_group"
                android:checkedButton="@+id/income_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type_text_view"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/income_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/income_radio_button"/>

                <RadioButton
                    android:id="@+id/expense_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/expense_radio_button"/>

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputFilledStyle"
                android:id="@+id/date_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type_radio_group"
                android:layout_marginTop="8dp"
                android:hint="@string/date_text_input_layout"
                app:startIconDrawable="@drawable/ic_calendar"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/save_color"
                app:strokeColor="@color/save_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_text_input_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1.0"
                android:text="@string/save_button_text"
                android:layout_marginTop="8dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>